ya funciona crear cuenta

--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
  <link rel="stylesheet" href="%PUBLIC_URL%/overlayScrollbars/css/OverlayScrollbars.min.css">
  <!-- Theme style -->
  <link rel="stylesheet" href="%PUBLIC_URL%/css/adminlte.min.css">
-  <title>React App</title>
+  <title>Doctor Online</title>
 </head>
 
 <body>
