tratando de solucionar la vista del usuario

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
 
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <link class="hold-transition sidebar-mini"/>
 
   <!-- Google Font: Source Sans Pro -->
   <link rel="stylesheet"
