modulo usuario casi completo falta eliminar y del modulo administrador actualizar

--- a/public/index.html
+++ b/public/index.html
@@ -22,20 +22,22 @@
   <!-- Theme style -->
   <link rel="stylesheet" href="%PUBLIC_URL%/dist/css/adminlte.min.css">
 
- <!-- Google Font: Source Sans Pro -->
- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
- <!-- Font Awesome Icons -->
- <link rel="stylesheet" href="%PUBLIC_URL%/fontawesome-free/css/all.min.css">
- <!-- overlayScrollbars -->
- <link rel="stylesheet" href="%PUBLIC_URL%/overlayScrollbars/css/OverlayScrollbars.min.css">
- <!-- Theme style -->
- <link rel="stylesheet" href="%PUBLIC_URL%/css/adminlte.min.css">
-  <title>Doctor Online</title>
+  <!-- Google Font: Source Sans Pro -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
+  <!-- Font Awesome Icons -->
+  <link rel="stylesheet" href="%PUBLIC_URL%/plugins/fontawesome-free/css/all.min.css">
+  <!-- IonIcons -->
+  <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+  <!-- Theme style -->
+  <link rel="stylesheet" href="%PUBLIC_URL%/dist/css/adminlte.min.css">
+  <title>ServiPlus</title>
 </head>
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root"></div>
+  <div id="root">
+    <div className="wrapper" />
+  </div>
   <script src="%PUBLIC_URL%/plugins/jquery/jquery.min.js"></script>
   <script src="%PUBLIC_URL%/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="%PUBLIC_URL%/dist/js/adminlte.min.js"></script>
@@ -61,6 +63,19 @@
 <script src="%PUBLIC_URL%/js/demo.js"></script>
 <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
 <script src="%PUBLIC_URL%/js/pages/dashboard2.js"></script>
+<!-- jQuery -->
+<script src="%PUBLIC_URL%/plugins/jquery/jquery.min.js"></script>
+<!-- Bootstrap -->
+<script src="%PUBLIC_URL%/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+<!-- AdminLTE -->
+<script src="%PUBLIC_URL%/dist/js/adminlte.js"></script>
+
+<!-- OPTIONAL SCRIPTS -->
+<script src="%PUBLIC_URL%/plugins/chart.js/Chart.min.js"></script>
+<!-- AdminLTE for demo purposes -->
+<script src="%PUBLIC_URL%/dist/js/demo.js"></script>
+<!-- AdminLTE dashboard demo (This is only for demo purposes) -->
+<script src="%PUBLIC_URL%/dist/js/pages/dashboard3.js"></script>
 </body>
 
 </html>
